# tuitube

./: .gitmodules  CMakeLists.txt  README.md  ytdl.patch
src/: CMakeLists.txt  config.cpp  config.h  config_ytdl.patch  main.cpp  requests.h  subscriptions.h  temp
src/invidious/: instances.h  subs.h  video.h
src/tui/: search.h  subscriptions.h  terminal.h  tui.h  utils.h
src/tui/tabs/: channel_view.h  generic_tab.h  popular.h  search.h  settings.h  subscriptions.h
